--- a/ta2men/assmap.html
+++ b/ta2men/assmap.html
@@ -6,6 +6,7 @@
     <title>خريطة الـتامين</title>
     <link rel="stylesheet" href="assmap.css">
 </head>
+<marquee>سيرفر خاص بمحمد علاء الدين كمال اهداء الي أدارة المعلومات والتوثيق والحاسب الالي</marquee>
 <body>
     <div class="container">
        
