--- a/ta2men/assmap.html
+++ b/ta2men/assmap.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-<marquee>سيرفر خاص بمحمد علاء الدين كمال اهداء الي أدارة المعلومات والتوثيق والحاسب الالي</marquee>
+    <div class="marquee-container">
+        <div id="marquee" class="marquee"></div>
+    </div>
     <div class="container">
        
         <div class="left-bar">
@@ -37,7 +39,24 @@
             <p id="city-details">اختر مدينة من القائمة</p>
         </div>
     </div>
-
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-left">
+                <h3>Developed By:</h3>
+                <p>Mohamed Alaa Eldin Kamal</p>
+            </div>
+            <div class="footer-center">
+                <p>© 2024 Mohamed Alaa. All Rights Reserved.</p>
+                <p>Designed and Developed with ❤️</p>
+            </div>
+            <div class="footer-right">
+                <h3>Contact:</h3>
+                <p>Email: <a href="mailto:developer@mohamedalaa.com">mohamed 3la2@gmail.com</a></p>
+                <p>Phone: +20 010 333 91156</p>
+            </div>
+        </div>
+    </footer>
     <script src="assmap.js"></script>
 </body>
+
 </html>
