--- a/Hamza games/hmzcoin.html
+++ b/Hamza games/hmzcoin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>لعبة حساب العملات</title>
+  <title>   لعبة حساب العملات المصرية</title>
   <link rel="stylesheet" href="hmzcoin.css">
 </head>
 <body>
