--- a/Hamza games/hmzcoin.html
+++ b/Hamza games/hmzcoin.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>لعبة حساب العملات</h1>
+    <h1> sdsd لعبة حساب العملات</h1>
     <div class="info">
       <p>النقاط: <span id="score">0</span></p>
       <p>الوقت المتبقي: <span id="timer">30</span> ثانية</p>
