--- a/Hamza games/hmzcoin.html
+++ b/Hamza games/hmzcoin.html
@@ -9,6 +9,7 @@
 <body>
   <div class="game-container">
     <h1> sdsd لعبة حساب العملات</h1>
+<h2>يا مرحب يا استاذ علي</h2>
     <div class="info">
       <p>النقاط: <span id="score">0</span></p>
       <p>الوقت المتبقي: <span id="timer">30</span> ثانية</p>
