--- a/Hamza games/hmzcoin.html
+++ b/Hamza games/hmzcoin.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="game-container">
-    <h1> sdsd لعبة حساب العملات</h1>
-<h2>يا مرحب يا استاذ علي</h2>
+    <h1>  لعبة حساب العملات</h1>
+<h2 style="color:yellow;">يا مرحب يا استاذ علي</h2>
     <div class="info">
       <p>النقاط: <span id="score">0</span></p>
       <p>الوقت المتبقي: <span id="timer">30</span> ثانية</p>
