--- a/Resala/Resala.html
+++ b/Resala/Resala.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>خاص بمعمل رسالة </title>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="Hamza/Wateen.css">
     <link rel="stylesheet" href="Hamza.css">
 </head>
@@ -19,8 +21,8 @@
  
     <div id="login" class="section hidden">
         <h2>تسجيل الدخول</h2>
-        <input type="text" id="username" placeholder="Username">
-        <input type="password" id="password" placeholder="Password">
+        <input type="text" id="username" placeholder="أسم المستخدم">
+        <input type="password" id="password" placeholder="كلمة المرور">
         <button onclick="login()">دخول</button>
     </div>
 
@@ -63,8 +65,39 @@
     </div>
     </div>
 
+
+    <div>
+        
+    </div>
+   
+ <footer class="footer">
+        <div class="containerf">
+            <div class="footer-top">
+                <div class="footer-logo">
+                    <img src="logo.png" alt="Company Logo">
+                </div>
+                <a href="https://wa.me/01033391156?text=Hello%20I%20need%20help!" target="_blank">
+                    <img src="whatsapp-icon.png" alt="WhatsApp" width="30px"> Chat with us
+                </a>
+                <div class="footer-nav">
+                    <a href="#home">Home</a>
+                    <a href="#">About</a>
+                    <a href="#">Services</a>
+                    <a href="#">Contact</a>
+                </div>
+                <div class="footer-social">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p> جميع الحقوق محفوظة.  م/ محمدعلاء 2025 &copy; </p>
+            </div>
+        </div>
+    </footer>
     <script src="Wateen/Hamza.js"></script>
     <script src="Hamza.js"></script>
-
 </body>
 </html>
