--- a/Resala/Resala.html
+++ b/Resala/Resala.html
@@ -76,7 +76,7 @@
                 <div class="footer-logo">
                     <img src="logo.png" alt="Company Logo">
                 </div>
-                <a href="https://wa.me/01033391156?text=Hello%20I%20need%20help!" target="_blank">
+                <a href="https://wa.me/+201033391156?text=Hello%20I%20need%20help!" target="_blank">
                     <img src="whatsapp-icon.png" alt="WhatsApp" width="30px"> Chat with us
                 </a>
                 <div class="footer-nav">
