--- a/Resala/Resala.html
+++ b/Resala/Resala.html
@@ -73,8 +73,9 @@
  <footer class="footer">
         <div class="containerf">
             <div class="footer-top">
-                <div class="footer-logo">
-                    <img src="logo.png" alt="Company Logo">
+                
+               <div class="footer-logo">
+                    <img src="Mohamed3la2.png" alt="A.Hamza">
                 </div>
                 <a href="https://wa.me/+201033391156?text=Hello%20I%20need%20help!" target="_blank">
                     <img src="Mohamed3la2.png" alt="WhatsApp" width="30px"> تحدث مع المطور
