--- a/Resala/Resala.html
+++ b/Resala/Resala.html
@@ -77,8 +77,8 @@
                <div class="footer-logo">
                     <img src="Mohamed3la2.png" alt="A.Hamza">
                 </div>
-                <a href="https://wa.me/+201033391156?text=Hello%20I%20need%20help!" target="_blank">
-                    <img src="Mohamed3la2.png" alt="WhatsApp" width="20px"> تحدث مع المطور
+               <a href="https://wa.me/+201033391156?text=Hello%20I%20need%20help!" target="_blank">
+                    <img src="Mohamed3la2.png" alt="WhatsApp" width="20px" hight="20px"> تحدث مع المطور
                 </a>
                 <div class="footer-nav">
                     <a href="#home">Home</a>
