--- a/Resala/Resala.html
+++ b/Resala/Resala.html
@@ -15,7 +15,7 @@
 
     
     <div id="landing" class="section">
-        <h1>مر حبا بكم في برنامج صغط الملفات</h1>
+        <h1>مر حبا بكم في برنامج ضغط الملفات</h1>
         <h2>هذا البرنامج خاص بمعمل رسالة بأسيوط</h2>
         <button onclick="showSection('login')"> تسجيل الدخول</button>
     </div>
